--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     function pageRedirect() {
         window.location.replace("./index.php");
     }      
-    setTimeout("pageRedirect()", 5000);
+    setTimeout("pageRedirect()", 1);
 </script>
 </head>
 <body>
-    <p><strong>Note:</strong> You will be redirected to the tutorialrepublic.com in 10 sec. You are not able to get back to this page by clicking the browser back button.</p>
+    <p><strong>Note:</strong> Please wait for a moment.</p>
 </body>
 </html>
