--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+<script>(function(w,d,p,u) {
+  w._ugchaus = w._ugchaus || { pixelCode: p };
+  var s = d.createElement('script');
+  s.src = u + '/pixel.js';
+  s.async = true;
+  s.setAttribute('data-pixel-code', p);
+  d.head.appendChild(s);
+})(window, document, 'px_feda9f378d28', 'https://attribution.ugchaus.com');
+</script>
+<!-- End UGC HAUS Attribution Pixel -->
+    
 </head>
 
 <body>
@@ -997,5 +1009,6 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
