--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -34,6 +34,17 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <script>(function(w,d,p,u) {
+  w._ugchaus = w._ugchaus || { pixelCode: p };
+  var s = d.createElement('script');
+  s.src = u + '/pixel.js';
+  s.async = true;
+  s.setAttribute('data-pixel-code', p);
+  d.head.appendChild(s);
+})(window, document, 'px_feda9f378d28', 'https://attribution.ugchaus.com');
+</script>
+  
 </head>
 
 <body>
@@ -112,5 +123,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
